--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-<div class="wrapper">
+<div class="wrapper_mobile">
 <div class="menu_heder_mobile">
 <div>
 <img src="./img/Hamburger.svg" alt="">
@@ -19,10 +19,37 @@
 <a href="#">trxvl.</a>
 </div>
 </div>
-
 </div>
 
-    
+<div class="wrapper_desktop">
+<div class="menu_heder_desktop">
+    <div>
+<a href="">trxvl.</a>
+    </div>
+    <div class="menu_heder_item">
+        <a href="">Home</a>
+        <a href="">Stays</a>
+        <a href="">Fights</a>
+        <a href="">Packages</a>
+        <a href="">Sign Up</a>
+    </div>
+</div>
+</div>  
 </header>
+
+<section>
+<div>
+<h2>The whole world awaits.</h2>
+<div>
+    <form action="">
+    <input type="text">
+    <input type="text">
+    <input type="text">
+    <input type="text">
+    <button>Search</button>
+    </form>
+</div>
+</div>
+</section>
 </body>
 </html>
